[gd_scene load_steps=6 format=2]

[ext_resource path="res://levels/components/Room.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level7_wr/room_wr_01.png" type="Texture" id=2]
[ext_resource path="res://levels/level7_wr/ending/Baby.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/dialog/DialogBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/level7_wr/ending/final_room_manager.gd" type="Script" id=5]

[node name="BabyRoom" instance=ExtResource( 1 )]

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 2 )

[node name="Baby" parent="Enemies" index="0" instance=ExtResource( 3 )]

[node name="FinalRoomManager" type="CanvasLayer" parent="." index="4"]
script = ExtResource( 5 )
boss_final_path = "res://levels/level7_wr/ending/final_boss/BossFinal.tscn"

[node name="DialogContainer" type="Control" parent="FinalRoomManager" index="0"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -156.0
margin_top = -133.0
margin_right = 160.0
margin_bottom = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBoxStart" parent="FinalRoomManager/DialogContainer" index="0" instance=ExtResource( 4 )]
margin_left = 158.0
margin_top = 21.0
margin_right = 158.0
margin_bottom = 21.0
messages = [ "It's...a child?" ]
img_path = "res://player/player_icon.png"
speaker_name = "Adventurer"

[node name="DialogBoxKilledBaby" parent="FinalRoomManager/DialogContainer" index="1" instance=ExtResource( 4 )]
margin_left = 158.0
margin_top = 21.0
margin_right = 158.0
margin_bottom = 21.0
messages = [ "I'm sorry adventurer. You had already killed the monster that was locked in here when you first saved me.", "After seeing you kill the other six, I was worried that you were some kind of monster yourself...", "And you are.", "You've done well, adventurer. But I cannot let you leave this place anymore." ]
img_path = "res://levels/level0/end_room/princess/princess_icon.png"
speaker_name = "Princess"

[node name="DialogBoxSpareBaby" parent="FinalRoomManager/DialogContainer" index="2" instance=ExtResource( 4 )]
margin_left = 158.0
margin_top = 21.0
margin_right = 158.0
margin_bottom = 21.0
messages = [ "I'm sorry adventurer. You had already killed the monster that was locked in here when you first saved me.", "After seeing you kill the other six, I was worried that you were some kind of monster yourself...", "But I was wrong.", "You've done well, adventurer. Thank you." ]
img_path = "res://levels/level0/end_room/princess/princess_icon.png"
speaker_name = "Princess"

[node name="SpareTimer" type="Timer" parent="FinalRoomManager" index="1"]
one_shot = true
